Add GDASapp (first wave of JEDI changes) (#871)
Merge changes associated with g-w issue #521 from g-w branch feature/ufsda_gdasapp into develop. feature/ufsda_gdasapp contains g-w extensions for JEDI based atmospheric DA.

Specifically, this PR adds the option to add JEDI based variational and/or ensemble DA jobs to replace GSI based DA jobs.   The toggling on/off of JEDI_VAR and JEDI_ENS jobs is controlled via two new variables added to `config.base.emc.dyn` and `config.base.nco.static`
```
# DA engine
export DO_JEDIVAR="NO"
export DO_JEDIENS="NO"
```
When both variables are `NO`, the global workflow uses GSI based DA jobs.   Thus, the PR does not alter the default behavior of the develop global workflow.

When `DO_JEDIVAR=YES`, GSI jobs `anal` and `analdiag` are replaced by JEDI_VAR jobs `atmanalprep`, `atmanalrun`, and `atmanalpost`.  When `DO_JEDIENS=YES`, GSI jobs `eobs`, `ediag`, and `eupd` are replaced by JEDI_ENS jobs `atmensanalprep`, `atmensanalrun`, and `atmensanalpost`.   

`checkout.sh`, `build_all.sh`, and `link_workflow.sh` are updated to clone, build, and install the GDASapp in the global workflow. 
  Local directory `sorc/gdas.cd` contains the GDASApp superstructure plus the relevant components of JEDI needed to run GDASApp.

Closes #521

--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,7 @@ sorc/gldas.fd
 sorc/gsi_enkf.fd
 sorc/gsi.fd
 sorc/enkf.fd
+sorc/gdas.cd
 sorc/gsi_utils.fd
 sorc/gsi_monitor.fd
 sorc/ufs_utils.fd
@@ -145,6 +146,12 @@ jobs/JGFS_ATMOS_WAFS_BLENDING_0P25
 jobs/JGFS_ATMOS_WAFS_GCIP
 jobs/JGFS_ATMOS_WAFS_GRIB2
 jobs/JGFS_ATMOS_WAFS_GRIB2_0P25
+jobs/JGDAS_GLOBAL_ATMOS_ANALYSIS_POST
+jobs/JGDAS_GLOBAL_ATMOS_ANALYSIS_PREP
+jobs/JGDAS_GLOBAL_ATMOS_ANALYSIS_RUN
+jobs/JGDAS_GLOBAL_ATMOS_ENSANAL_POST
+jobs/JGDAS_GLOBAL_ATMOS_ENSANAL_PREP
+jobs/JGDAS_GLOBAL_ATMOS_ENSANAL_RUN
 # scripts symlinks
 scripts/exemcsfc_global_sfc_prep.sh
 scripts/exgdas_atmos_gldas.sh
@@ -188,6 +195,7 @@ ush/radmon_verf_angle.sh
 ush/radmon_verf_bcoef.sh
 ush/radmon_verf_bcor.sh
 ush/radmon_verf_time.sh
+ush/ufsda
 ush/wafs_blending.sh
 ush/wafs_grib2.regrid.sh
 ush/wafs_intdsk.sh
