Update WAFS rocoto scripts for USE_CFP
- The wafsgrib2 and wafsgrib20p25 jobs need to set "USE_CFP=YES", so
have added a section in WCOSS2.env for those jobs to set that.
- Updated the wafsgrib2.sh and wafsgrib20p25.sh rocoto job scripts to
source the env file to get that setting at runtime.

Refs: #744

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -203,4 +203,8 @@ elif [ $step = "waveawipsbulls" ]; then
 
     unset PERL5LIB
 
+elif [ $step = "wafsgrib2" -o $step = "wafsgrib20p25" ]; then
+
+    export USE_CFP=${USE_CFP:-"YES"}
+
 fi
