--- a/env/ORION.env
+++ b/env/ORION.env
@@ -230,4 +230,9 @@ elif [ $step = "awips" ]; then
 elif [ $step = "gempak" ]; then
 
      echo "WARNING: $step is not enabled on $machine!"
+
+elif [ $step = "wafsgrib2" -o $step = "wafsgrib20p25" ]; then
+
+    export USE_CFP=${USE_CFP:-"YES"}
+
 fi
