Modify env files for aero da jobs

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -5,6 +5,7 @@ if [ $# -ne 1 ]; then
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
     echo "atmanalrun atmensanalrun"
+    echo "aeroanlrun"
     echo "anal sfcanl fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
@@ -74,6 +75,16 @@ elif [ $step = "atmensanalrun" ]; then
     export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-$nth_max}
     [[ $NTHREADS_ATMENSANAL -gt $nth_max ]] && export NTHREADS_ATMENSANAL=$nth_max
     export APRUN_ATMENSANAL="$launcher -n $npe_atmensanalrun"
+
+elif [ $step = "aeroanlrun" ]; then
+
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+
+    nth_max=$(($npe_node_max / $npe_node_aeroanlrun))
+
+    export NTHREADS_AEROANL=${nth_aeroanlrun:-$nth_max}
+    [[ $NTHREADS_AEROANL -gt $nth_max ]] && export NTHREADS_AEROANL=$nth_max
+    export APRUN_AEROANL="$launcher -n $npe_aeroanlrun"
 
 elif [ $step = "anal" ]; then
 
