Update S4 environment and module file.  #138

--- a/env/S4.env
+++ b/env/S4.env
@@ -4,7 +4,8 @@ if [ $# -ne 1 ]; then
 
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
-    echo "anal fcst post vrfy metp"
+    echo "atmanalrun atmensanalrun"
+    echo "anal sfcanl fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
     exit 1
@@ -43,16 +44,40 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     nth_max=$(($npe_node_max / $npe_node_prep))
 
     export POE="NO"
-    export BACK="YES"
+    export BACK=${BACK:-"YES"}
     export sys_tp="S4"
 
-elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll" -o $step = "wavepostpnt" ]; then
+elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostpnt" ]; then
 
     export mpmd="--multi-prog"
     export CFP_MP="YES"
     if [ $step = "waveprep" ]; then export MP_PULSE=0 ; fi
     export wavempexec=${launcher}
     export wave_mpmd=${mpmd}
+
+elif [ $step = "atmanalrun" ]; then
+
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+
+    nth_max=$(($npe_node_max / $npe_node_atmanalrun))
+
+    export NTHREADS_ATMANAL=${nth_atmanalrun:-$nth_max}
+    [[ $NTHREADS_ATMANAL -gt $nth_max ]] && export NTHREADS_ATMANAL=$nth_max
+    export APRUN_ATMANAL="$launcher -n $npe_atmanalrun"
+
+elif [ $step = "atmensanalrun" ]; then
+
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+
+    nth_max=$(($npe_node_max / $npe_node_atmensanalrun))
+
+    export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-$nth_max}
+    [[ $NTHREADS_ATMENSANAL -gt $nth_max ]] && export NTHREADS_ATMENSANAL=$nth_max
+    export APRUN_ATMENSANAL="$launcher -n $npe_atmensanalrun"
 
 elif [ $step = "anal" ]; then
 
@@ -78,11 +103,17 @@ elif [ $step = "anal" ]; then
     npe_cycle=${ntiles:-6}
     export APRUN_CYCLE="$launcher -n $npe_cycle"
 
-
     export NTHREADS_GAUSFCANL=1
     npe_gausfcanl=${npe_gausfcanl:-1}
-
     export APRUN_GAUSFCANL="$launcher -n $npe_gausfcanl"
+
+elif [ $step = "sfcanl" ]; then
+    nth_max=$(($npe_node_max / $npe_node_sfcanl))
+
+    export NTHREADS_CYCLE=${nth_sfcanl:-14}
+    [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
+    npe_sfcanl=${ntiles:-6}
+    export APRUN_CYCLE="$launcher -n $npe_sfcanl"
 
 elif [ $step = "gldas" ]; then
 
@@ -107,27 +138,27 @@ elif [ $step = "eobs" ]; then
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
 
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+
     nth_max=$(($npe_node_max / $npe_node_eobs))
 
     export NTHREADS_GSI=${nth_eobs:-$nth_max}
     [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
     export APRUN_GSI="$launcher"
 
+elif [ $step = "eupd" ]; then
+
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="$launcher -n \$ncmd --multi-prog"
-
-elif [ $step = "eupd" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_eupd))
 
     export NTHREADS_ENKF=${nth_eupd:-$nth_max}
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
     export APRUN_ENKF="$launcher"
-
-    export CFP_MP=${CFP_MP:-"YES"}
-    export USE_CFP=${USE_CFP:-"YES"}
-    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
 
 elif [ $step = "fcst" ]; then
 
@@ -152,6 +183,7 @@ elif [ $step = "fcst" ]; then
     export NTHREADS_REMAP=${nth_remap:-2}
     [[ $NTHREADS_REMAP -gt $nth_max ]] && export NTHREADS_REMAP=$nth_max
     export APRUN_REMAP="$launcher"
+    export I_MPI_DAPL_UD="enable"
 
 elif [ $step = "efcs" ]; then
 
