--- a/workflow/hosts/orion.yaml
+++ b/workflow/hosts/orion.yaml
@@ -10,8 +10,9 @@ noscrub: $HOMEDIR
 scheduler: slurm
 account: fv3-cpu
 queue: batch
-queue_service: service
+queue_service: batch
 partition_batch: orion
+partition_service: service
 chgrp_rstprod: 'YES'
 chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'NO'
