Update UFS_UTILS tag to ufs_utils_1_8_0
- Update develop to the newly released ufs_utils_1_8_0 UFS_UTILS tag.
- New tag contains:
  - cleanup of decommissioned platforms
  - adding support for WCOSS2
  - regression test updates
  - code updates to chgres_cube and emcsfc_snow2mdl
  - some small script updates and cleanup
  - change to the FNAISC file from CFSR.SEAICE.1982.2012.monthly.clim.grb
    to IMS-NIC.blended.ice.monthly.clim.grb

Refs #974

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -8,7 +8,7 @@ protocol = git
 required = True
 
 [UFS-Utils]
-hash = a2b0817
+hash = ufs_utils_1_8_0
 local_path = sorc/ufs_utils.fd
 repo_url = https://github.com/NOAA-EMC/UFS_UTILS.git
 protocol = git
