--- a/env/ORION.env
+++ b/env/ORION.env
@@ -232,7 +232,7 @@ elif [ $step = "efcsfsoi" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_efcsfsoi))
 
-    export NTHREADS_FV3=${nth_efcfsois:-$nth_max}
+    export NTHREADS_FV3=${nth_efcsfsoi:-$nth_max}
     [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
     export cores_per_node=$npe_node_max
     #export APRUN_FV3="$launcher"
