Update workflow PACKAGEROOT and create wcoss2 host
- Create new workflow/hosts/wcoss2.yaml file
- Update NWPROD->PACKAGEROOT variable in hera.yaml and orion.yaml
- Update NWPROD->PACKAGEROOT variable in setup_expt.py

Refs #419

--- a/workflow/hosts/orion.yaml
+++ b/workflow/hosts/orion.yaml
@@ -1,7 +1,7 @@
 base_git: '/work/noaa/global/glopara/git'
 base_svn: '/work/noaa/global/glopara/svn'
 dmpdir: '/work/noaa/rstprod/dump'
-nwprod: '/work/noaa/global/glopara/nwpara'
+packageroot: '/work/noaa/global/glopara/nwpara'
 comroot: '/work/noaa/global/glopara/com'
 homedir: '/work/noaa/global/$USER'
 stmp: '/work/noaa/stmp/$USER'
