--- a/.github/workflows/linters.yaml
+++ b/.github/workflows/linters.yaml
@@ -1,17 +1,32 @@
+#
 name: linters
 on:
   pull_request:
     types: [opened, reopened, edited]
+
+permissions:
+  contents: read
+
 defaults:
   run:
     shell: bash -o pipefail {0}
+
 jobs:
   lint:
     runs-on: ubuntu-latest
+
+    permissions:
+      security-events: write
+      pull-requests: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
-      - name: Run Shellcheck
-        uses: azohra/shell-linter@latest
         with:
-          exclude-paths: "sorc/*.fd"
+          fetch-depth: 0
+
+      - name: Lint shell scripts
+        uses: redhat-plumbers-in-action/differential-shellcheck@latest
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          shell-scripts: ush/preamble.sh
