--- a/env/S4.env
+++ b/env/S4.env
@@ -19,7 +19,7 @@ if [[ "$PARTITION_BATCH" = "s4" ]]; then
 elif [[ "$PARTITION_BATCH" = "ivy" ]]; then
    export npe_node_max=20
 fi
-export launcher="srun --export=ALL"
+export launcher="srun -l --export=ALL"
 
 # Configure MPI environment
 #export I_MPI_ADJUST_ALLREDUCE=5
@@ -44,10 +44,10 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     nth_max=$(($npe_node_max / $npe_node_prep))
 
     export POE="NO"
-    export BACK=${BACK:-"YES"}
+    export BACK="NO"
     export sys_tp="S4"
 
-elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostpnt" ]; then
+elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll" -o $step = "wavepostpnt" ]; then
 
     export mpmd="--multi-prog"
     export CFP_MP="YES"
@@ -79,6 +79,16 @@ elif [ $step = "atmensanalrun" ]; then
     [[ $NTHREADS_ATMENSANAL -gt $nth_max ]] && export NTHREADS_ATMENSANAL=$nth_max
     export APRUN_ATMENSANAL="$launcher -n $npe_atmensanalrun"
 
+elif [ $step = "aeroanlrun" ]; then
+
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+
+    nth_max=$(($npe_node_max / $npe_node_aeroanlrun))
+
+    export NTHREADS_AEROANL=${nth_aeroanlrun:-$nth_max}
+    [[ $NTHREADS_AEROANL -gt $nth_max ]] && export NTHREADS_AEROANL=$nth_max
+    export APRUN_AEROANL="$launcher -n $npe_aeroanlrun"
+
 elif [ $step = "anal" ]; then
 
     export MKL_NUM_THREADS=4
@@ -102,6 +112,7 @@ elif [ $step = "anal" ]; then
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
     npe_cycle=${ntiles:-6}
     export APRUN_CYCLE="$launcher -n $npe_cycle"
+
 
     export NTHREADS_GAUSFCANL=1
     npe_gausfcanl=${npe_gausfcanl:-1}
