Enabled nsstbufr and acft prepbufr creation global options. #138

--- a/workflow/hosts/hera.yaml
+++ b/workflow/hosts/hera.yaml
@@ -18,3 +18,5 @@ chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'YES'
 localarch: 'NO'
 atardir: '/NCEPDEV/$HPSS_PROJECT/1year/$USER/$machine/scratch/$PSLOT'
+do_make_nsstbufr: 'NO'
+do_make_acftbufr: 'NO'
