--- a/workflow/hosts/orion.yaml
+++ b/workflow/hosts/orion.yaml
@@ -18,3 +18,5 @@ chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'NO'
 localarch: 'NO'
 atardir: '$NOSCRUB/archive_rotdir/$PSLOT'
+do_make_nsstbufr: 'NO'
+do_make_acftbufr: 'NO'
