round of linter

--- a/env/ORION.env
+++ b/env/ORION.env
@@ -298,17 +298,17 @@ elif [ $step = "esfc" ]; then
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
     export APRUN_CYCLE="$launcher -n $npe_esfc"
 
-elif [ $step = "esfcfsoi" ]; then
+elif [ ${step} = "esfcfsoi" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_esfcfsoi))
+    nth_max=$((npe_node_max / npe_node_esfcfsoi))
 
     export NTHREADS_ESFC=${nth_esfcfsoi:-$nth_max}
-    [[ $NTHREADS_ESFC -gt $nth_max ]] && export NTHREADS_ESFC=$nth_max
-    export APRUN_ESFC="$launcher -n $npe_esfcfsoi"
+    [[ ${NTHREADS_ESFC} -gt ${nth_max} ]] && export NTHREADS_ESFC=${nth_max}
+    export APRUN_ESFC="${launcher} -n ${npe_esfcfsoi}"
 
     export NTHREADS_CYCLE=${nth_cycle:-14}
-    [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
-    export APRUN_CYCLE="$launcher -n $npe_esfcfsoi"
+    [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
+    export APRUN_CYCLE="${launcher} -n ${npe_esfcfsoi}"
 
 elif [ $step = "epos" ]; then
 
@@ -318,13 +318,13 @@ elif [ $step = "epos" ]; then
     [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
     export APRUN_EPOS="$launcher"
 
-elif [ $step = "eposfsoi" ]; then
+elif [ ${step} = "eposfsoi" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_eposfsoi))
+    nth_max=$((npe_node_max / npe_node_eposfsoi))
 
-    export NTHREADS_EPOS=${nth_eposfsoi:-$nth_max}
-    [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
-    export APRUN_EPOS="$launcher"
+    export NTHREADS_EPOS=${nth_eposfsoi:-${nth_max}}
+    [[ ${NTHREADS_EPOS} -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
+    export APRUN_EPOS="${launcher}"
 
 elif [ $step = "init" ]; then
 
