--- a/env/ORION.env
+++ b/env/ORION.env
@@ -172,7 +172,7 @@ elif [ $step = "eupdfsoi" ]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="$launcher -n \$ncmd --multi-prog"
 
-    nth_max=$(($npe_node_max / $npe_node_eupdfsoi))
+    nth_max=$((npe_node_max / npe_node_eupdfsoi))
 
     export NTHREADS_ENKF=${nth_eupdfsoi:-$nth_max}
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
@@ -184,7 +184,7 @@ elif [ $step = "efsoi" ]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="$launcher -n \$ncmd --multi-prog"
 
-    nth_max=$(($npe_node_max / $npe_node_efsoi))
+    nth_max=$((npe_node_max / npe_node_efsoi))
 
     export NTHREADS_ENKF=${nth_efsoi:-$nth_max}
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
@@ -230,12 +230,12 @@ elif [ $step = "efcs" ]; then
 
 elif [ $step = "efcsfsoi" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_efcsfsoi))
+    nth_max=$((npe_node_max / npe_node_efcsfsoi))
 
     export NTHREADS_FV3=${nth_efcsfsoi:-$nth_max}
     [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
     export cores_per_node=$npe_node_max
-    export APRUN_FV3="$launcher -n $npe_efcsfsoi"
+    export APRUN_FV3="$launcher -n npe_efcsfsoi"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
@@ -272,7 +272,7 @@ elif [ $step = "ecen" ]; then
 
 elif [ $step = "ecenfsoi" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_ecenfsoi))
+    nth_max=$((npe_node_max / npe_node_ecenfsoi))
 
     export NTHREADS_ECEN=${nth_ecenfsoi:-$nth_max}
     [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
@@ -302,7 +302,7 @@ elif [ ${step} = "esfcfsoi" ]; then
 
     nth_max=$((npe_node_max / npe_node_esfcfsoi))
 
-    export NTHREADS_ESFC=${nth_esfcfsoi:-$nth_max}
+    export NTHREADS_ESFC=${nth_esfcfsoi:-${nth_max}}
     [[ ${NTHREADS_ESFC} -gt ${nth_max} ]] && export NTHREADS_ESFC=${nth_max}
     export APRUN_ESFC="${launcher} -n ${npe_esfcfsoi}"
 
