--- a/env/ORION.env
+++ b/env/ORION.env
@@ -51,7 +51,7 @@ elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $ste
     export wavempexec=${launcher}
     export wave_mpmd=${mpmd}
 
-elif [ $step = "atmanalrun" ]; then
+elif [ "${step}" = "atmanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -63,7 +63,7 @@ elif [ $step = "atmanalrun" ]; then
     [[ $NTHREADS_ATMANAL -gt $nth_max ]] && export NTHREADS_ATMANAL=$nth_max
     export APRUN_ATMANAL="$launcher -n $npe_atmanalrun"
 
-elif [ $step = "atmensanalrun" ]; then
+elif [ "${step}" = "atmensanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -75,7 +75,7 @@ elif [ $step = "atmensanalrun" ]; then
     [[ $NTHREADS_ATMENSANAL -gt $nth_max ]] && export NTHREADS_ATMENSANAL=$nth_max
     export APRUN_ATMENSANAL="$launcher -n $npe_atmensanalrun"
 
-elif [ $step = "aeroanlrun" ]; then
+elif [ "${step}" = "aeroanlrun" ]; then
 
     export APRUNCFP="$launcher -n \$ncmd --multi-prog"
 
@@ -85,7 +85,7 @@ elif [ $step = "aeroanlrun" ]; then
     [[ $NTHREADS_AEROANL -gt $nth_max ]] && export NTHREADS_AEROANL=$nth_max
     export APRUN_AEROANL="$launcher -n $npe_aeroanlrun"
 
-elif [ $step = "anal" ]; then
+elif [ "${step}" = "anal" ]; then
 
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
@@ -113,7 +113,7 @@ elif [ $step = "anal" ]; then
     npe_gausfcanl=${npe_gausfcanl:-1}
     export APRUN_GAUSFCANL="$launcher -n $npe_gausfcanl"
 
-elif [ $step = "sfcanl" ]; then
+elif [ "${step}" = "sfcanl" ]; then
     nth_max=$(($npe_node_max / $npe_node_sfcanl))
 
     export NTHREADS_CYCLE=${nth_sfcanl:-14}
@@ -121,7 +121,7 @@ elif [ $step = "sfcanl" ]; then
     npe_sfcanl=${ntiles:-6}
     export APRUN_CYCLE="$launcher -n $npe_sfcanl"
 
-elif [ $step = "gldas" ]; then
+elif [ "${step}" = "gldas" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_gldas))
 
@@ -139,7 +139,7 @@ elif [ $step = "gldas" ]; then
     npe_gldas_data_proc=$(($gldas_spinup_hours + 12))
     export APRUN_GLDAS_DATA_PROC="$launcher -n $npe_gldas_data_proc --multi-prog"
 
-elif [ $step = "eobs" ]; then
+elif [ "${step}" = "eobs" ]; then
 
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
@@ -154,7 +154,7 @@ elif [ $step = "eobs" ]; then
     [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
     export APRUN_GSI="$launcher"
 
-elif [ $step = "eupd" ]; then
+elif [ "${step}" = "eupd" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -166,7 +166,7 @@ elif [ $step = "eupd" ]; then
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
     export APRUN_ENKF="$launcher"
 
-elif [ $step = "eupdfsoi" ]; then
+elif [ "${step}" = "eupdfsoi" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -178,7 +178,7 @@ elif [ $step = "eupdfsoi" ]; then
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
     export APRUN_ENKF="$launcher"
 
-elif [ $step = "efsoi" ]; then
+elif [ "${step}" = "efsoi" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -190,7 +190,7 @@ elif [ $step = "efsoi" ]; then
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
     export APRUN_ENKF="$launcher"
 
-elif [ $step = "fcst" ]; then
+elif [ "${step}" = "fcst" ]; then
 
     #PEs and PEs/node can differ for GFS and GDAS forecasts if threading differs
     if [[ $CDUMP == "gfs" ]]; then
@@ -215,7 +215,7 @@ elif [ $step = "fcst" ]; then
     export APRUN_REMAP="$launcher"
     export I_MPI_DAPL_UD="enable"
 
-elif [ $step = "efcs" ]; then
+elif [ "${step}" = "efcs" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_efcs))
 
@@ -228,7 +228,7 @@ elif [ $step = "efcs" ]; then
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
     export APRUN_REGRID_NEMSIO="$launcher $LEVS"
 
-elif [ $step = "efcsfsoi" ]; then
+elif [ "${step}" = "efcsfsoi" ]; then
 
     nth_max=$((npe_node_max / npe_node_efcsfsoi))
 
@@ -242,7 +242,7 @@ elif [ $step = "efcsfsoi" ]; then
     export APRUN_REGRID_NEMSIO="$launcher $LEVS"
 
 
-elif [ $step = "post" ]; then
+elif [ "${step}" = "post" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_post))
 
@@ -254,7 +254,7 @@ elif [ $step = "post" ]; then
     [[ $NTHREADS_DWN -gt $nth_max ]] && export NTHREADS_DWN=$nth_max
     export APRUN_DWN="$launcher"
 
-elif [ $step = "ecen" ]; then
+elif [ "${step}" = "ecen" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_ecen))
 
@@ -270,7 +270,7 @@ elif [ $step = "ecen" ]; then
     [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
     export APRUN_CALCINC="$launcher"
 
-elif [ $step = "ecenfsoi" ]; then
+elif [ "${step}" = "ecenfsoi" ]; then
 
     nth_max=$((npe_node_max / npe_node_ecenfsoi))
 
@@ -286,7 +286,7 @@ elif [ $step = "ecenfsoi" ]; then
     [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
     export APRUN_CALCINC="$launcher"
 
-elif [ $step = "esfc" ]; then
+elif [ "${step}" = "esfc" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_esfc))
 
@@ -310,7 +310,7 @@ elif [ ${step} = "esfcfsoi" ]; then
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
     export APRUN_CYCLE="${launcher} -n ${npe_esfcfsoi}"
 
-elif [ $step = "epos" ]; then
+elif [ "${step}" = "epos" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_epos))
 
@@ -318,7 +318,7 @@ elif [ $step = "epos" ]; then
     [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
     export APRUN_EPOS="$launcher"
 
-elif [ ${step} = "eposfsoi" ]; then
+elif [ "${step}" = "eposfsoi" ]; then
 
     nth_max=$((npe_node_max / npe_node_eposfsoi))
 
@@ -326,11 +326,11 @@ elif [ ${step} = "eposfsoi" ]; then
     [[ ${NTHREADS_EPOS} -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
     export APRUN_EPOS="${launcher}"
 
-elif [ $step = "init" ]; then
+elif [ "${step}" = "init" ]; then
 
     export APRUN="$launcher"
 
-elif [ $step = "postsnd" ]; then
+elif [ "${step}" = "postsnd" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_postsnd))
 
@@ -342,7 +342,7 @@ elif [ $step = "postsnd" ]; then
     [[ $NTHREADS_POSTSNDCFP -gt $nth_max ]] && export NTHREADS_POSTSNDCFP=$nth_max
     export APRUN_POSTSNDCFP="$launcher"
 
-elif [ $step = "awips" ]; then
+elif [ "${step}" = "awips" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_awips))
 
@@ -350,7 +350,7 @@ elif [ $step = "awips" ]; then
     [[ $NTHREADS_AWIPS -gt $nth_max ]] && export NTHREADS_AWIPS=$nth_max
     export APRUN_AWIPSCFP="$launcher -n $npe_awips --multi-prog"
 
-elif [ $step = "gempak" ]; then
+elif [ "${step}" = "gempak" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_gempak))
 
