--- a/env/ORION.env
+++ b/env/ORION.env
@@ -60,7 +60,7 @@ elif [ "${step}" = "atmanalrun" ]; then
     nth_max=$(($npe_node_max / $npe_node_atmanalrun))
 
     export NTHREADS_ATMANAL=${nth_atmanalrun:-$nth_max}
-    [[ $NTHREADS_ATMANAL -gt $nth_max ]] && export NTHREADS_ATMANAL=$nth_max
+    [[ $NTHREADS_ATMANAL -gt ${nth_max} ]] && export NTHREADS_ATMANAL=${nth_max}
     export APRUN_ATMANAL="$launcher -n $npe_atmanalrun"
 
 elif [ "${step}" = "atmensanalrun" ]; then
@@ -72,7 +72,7 @@ elif [ "${step}" = "atmensanalrun" ]; then
     nth_max=$(($npe_node_max / $npe_node_atmensanalrun))
 
     export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-$nth_max}
-    [[ $NTHREADS_ATMENSANAL -gt $nth_max ]] && export NTHREADS_ATMENSANAL=$nth_max
+    [[ $NTHREADS_ATMENSANAL -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
     export APRUN_ATMENSANAL="$launcher -n $npe_atmensanalrun"
 
 elif [ "${step}" = "aeroanlrun" ]; then
@@ -82,7 +82,7 @@ elif [ "${step}" = "aeroanlrun" ]; then
     nth_max=$(($npe_node_max / $npe_node_aeroanlrun))
 
     export NTHREADS_AEROANL=${nth_aeroanlrun:-$nth_max}
-    [[ $NTHREADS_AEROANL -gt $nth_max ]] && export NTHREADS_AEROANL=$nth_max
+    [[ $NTHREADS_AEROANL -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="$launcher -n $npe_aeroanlrun"
 
 elif [ "${step}" = "anal" ]; then
@@ -97,11 +97,11 @@ elif [ "${step}" = "anal" ]; then
     nth_max=$(($npe_node_max / $npe_node_anal))
 
     export NTHREADS_GSI=${nth_anal:-$nth_max}
-    [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
+    [[ $NTHREADS_GSI -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
     export APRUN_GSI="$launcher"
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
-    [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
+    [[ $NTHREADS_CALCINC -gt ${nth_max} ]] && export NTHREADS_CALCINC=${nth_max}
     export APRUN_CALCINC="$launcher"
 
     export NTHREADS_CYCLE=${nth_cycle:-12}
@@ -126,11 +126,11 @@ elif [ "${step}" = "gldas" ]; then
     nth_max=$(($npe_node_max / $npe_node_gldas))
 
     export NTHREADS_GLDAS=${nth_gldas:-$nth_max}
-    [[ $NTHREADS_GLDAS -gt $nth_max ]] && export NTHREADS_GLDAS=$nth_max
+    [[ $NTHREADS_GLDAS -gt ${nth_max} ]] && export NTHREADS_GLDAS=${nth_max}
     export APRUN_GLDAS="$launcher -n $npe_gldas"
 
     export NTHREADS_GAUSSIAN=${nth_gaussian:-1}
-    [[ $NTHREADS_GAUSSIAN -gt $nth_max ]] && export NTHREADS_GAUSSIAN=$nth_max
+    [[ $NTHREADS_GAUSSIAN -gt ${nth_max} ]] && export NTHREADS_GAUSSIAN=${nth_max}
     export APRUN_GAUSSIAN="$launcher -n $npe_gaussian"
 
 # Must run data processing with exactly the number of tasks as time
@@ -151,7 +151,7 @@ elif [ "${step}" = "eobs" ]; then
     nth_max=$(($npe_node_max / $npe_node_eobs))
 
     export NTHREADS_GSI=${nth_eobs:-$nth_max}
-    [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
+    [[ $NTHREADS_GSI -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
     export APRUN_GSI="$launcher"
 
 elif [ "${step}" = "eupd" ]; then
@@ -163,7 +163,7 @@ elif [ "${step}" = "eupd" ]; then
     nth_max=$(($npe_node_max / $npe_node_eupd))
 
     export NTHREADS_ENKF=${nth_eupd:-$nth_max}
-    [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
+    [[ $NTHREADS_ENKF -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
     export APRUN_ENKF="$launcher"
 
 elif [ "${step}" = "eupdfsoi" ]; then
@@ -175,7 +175,7 @@ elif [ "${step}" = "eupdfsoi" ]; then
     nth_max=$((npe_node_max / npe_node_eupdfsoi))
 
     export NTHREADS_ENKF=${nth_eupdfsoi:-$nth_max}
-    [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
+    [[ $NTHREADS_ENKF -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
     export APRUN_ENKF="$launcher"
 
 elif [ "${step}" = "efsoi" ]; then
@@ -187,7 +187,7 @@ elif [ "${step}" = "efsoi" ]; then
     nth_max=$((npe_node_max / npe_node_efsoi))
 
     export NTHREADS_ENKF=${nth_efsoi:-$nth_max}
-    [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
+    [[ $NTHREADS_ENKF -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
     export APRUN_ENKF="$launcher"
 
 elif [ "${step}" = "fcst" ]; then
@@ -202,16 +202,16 @@ elif [ "${step}" = "fcst" ]; then
     nth_max=$(($npe_node_max / $npe_node_fcst))
 
     export NTHREADS_FV3=${nth_fv3:-$nth_max}
-    [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
+    [[ $NTHREADS_FV3 -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
     export cores_per_node=$npe_node_max
     export APRUN_FV3="$launcher -n $npe_fcst"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
-    [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
+    [[ $NTHREADS_REGRID_NEMSIO -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
     export APRUN_REGRID_NEMSIO="$launcher"
 
     export NTHREADS_REMAP=${nth_remap:-2}
-    [[ $NTHREADS_REMAP -gt $nth_max ]] && export NTHREADS_REMAP=$nth_max
+    [[ $NTHREADS_REMAP -gt ${nth_max} ]] && export NTHREADS_REMAP=${nth_max}
     export APRUN_REMAP="$launcher"
     export I_MPI_DAPL_UD="enable"
 
@@ -219,13 +219,13 @@ elif [ "${step}" = "efcs" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_efcs))
 
-    export NTHREADS_FV3=${nth_efcs:-$nth_max}
-    [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
+    export NTHREADS_FV3=${nth_efcs:-${nth_max}}
+    [[ $NTHREADS_FV3 -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
     export cores_per_node=$npe_node_max
     export APRUN_FV3="$launcher -n $npe_efcs"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
-    [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
+    [[ $NTHREADS_REGRID_NEMSIO -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
     export APRUN_REGRID_NEMSIO="$launcher $LEVS"
 
 elif [ "${step}" = "efcsfsoi" ]; then
@@ -233,12 +233,12 @@ elif [ "${step}" = "efcsfsoi" ]; then
     nth_max=$((npe_node_max / npe_node_efcsfsoi))
 
     export NTHREADS_FV3=${nth_efcsfsoi:-$nth_max}
-    [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
+    [[ $NTHREADS_FV3 -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
     export cores_per_node=$npe_node_max
     export APRUN_FV3="$launcher -n npe_efcsfsoi"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
-    [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
+    [[ $NTHREADS_REGRID_NEMSIO -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
     export APRUN_REGRID_NEMSIO="$launcher $LEVS"
 
 
@@ -247,11 +247,11 @@ elif [ "${step}" = "post" ]; then
     nth_max=$(($npe_node_max / $npe_node_post))
 
     export NTHREADS_NP=${nth_np:-1}
-    [[ $NTHREADS_NP -gt $nth_max ]] && export NTHREADS_NP=$nth_max
+    [[ $NTHREADS_NP -gt ${nth_max} ]] && export NTHREADS_NP=${nth_max}
     export APRUN_NP="$launcher"
 
     export NTHREADS_DWN=${nth_dwn:-1}
-    [[ $NTHREADS_DWN -gt $nth_max ]] && export NTHREADS_DWN=$nth_max
+    [[ $NTHREADS_DWN -gt ${nth_max} ]] && export NTHREADS_DWN=${nth_max}
     export APRUN_DWN="$launcher"
 
 elif [ "${step}" = "ecen" ]; then
@@ -259,7 +259,7 @@ elif [ "${step}" = "ecen" ]; then
     nth_max=$(($npe_node_max / $npe_node_ecen))
 
     export NTHREADS_ECEN=${nth_ecen:-$nth_max}
-    [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
+    [[ $NTHREADS_ECEN -gt ${nth_max} ]] && export NTHREADS_ECEN=${nth_max}
     export APRUN_ECEN="$launcher"
 
     export NTHREADS_CHGRES=${nth_chgres:-12}
@@ -267,7 +267,7 @@ elif [ "${step}" = "ecen" ]; then
     export APRUN_CHGRES="time"
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
-    [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
+    [[ $NTHREADS_CALCINC -gt ${nth_max} ]] && export NTHREADS_CALCINC=${nth_max}
     export APRUN_CALCINC="$launcher"
 
 elif [ "${step}" = "ecenfsoi" ]; then
@@ -275,7 +275,7 @@ elif [ "${step}" = "ecenfsoi" ]; then
     nth_max=$((npe_node_max / npe_node_ecenfsoi))
 
     export NTHREADS_ECEN=${nth_ecenfsoi:-$nth_max}
-    [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
+    [[ $NTHREADS_ECEN -gt ${nth_max} ]] && export NTHREADS_ECEN=${nth_max}
     export APRUN_ECEN="$launcher"
 
     export NTHREADS_CHGRES=${nth_chgres:-12}
@@ -283,7 +283,7 @@ elif [ "${step}" = "ecenfsoi" ]; then
     export APRUN_CHGRES="time"
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
-    [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
+    [[ $NTHREADS_CALCINC -gt ${nth_max} ]] && export NTHREADS_CALCINC=${nth_max}
     export APRUN_CALCINC="$launcher"
 
 elif [ "${step}" = "esfc" ]; then
@@ -291,7 +291,7 @@ elif [ "${step}" = "esfc" ]; then
     nth_max=$(($npe_node_max / $npe_node_esfc))
 
     export NTHREADS_ESFC=${nth_esfc:-$nth_max}
-    [[ $NTHREADS_ESFC -gt $nth_max ]] && export NTHREADS_ESFC=$nth_max
+    [[ $NTHREADS_ESFC -gt ${nth_max} ]] && export NTHREADS_ESFC=${nth_max}
     export APRUN_ESFC="$launcher -n $npe_esfc"
 
     export NTHREADS_CYCLE=${nth_cycle:-14}
@@ -314,8 +314,8 @@ elif [ "${step}" = "epos" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_epos))
 
-    export NTHREADS_EPOS=${nth_epos:-$nth_max}
-    [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
+    export NTHREADS_EPOS=${nth_epos:-${nth_max}}
+    [[ $NTHREADS_EPOS -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
     export APRUN_EPOS="$launcher"
 
 elif [ "${step}" = "eposfsoi" ]; then
@@ -335,11 +335,11 @@ elif [ "${step}" = "postsnd" ]; then
     nth_max=$(($npe_node_max / $npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
-    [[ $NTHREADS_POSTSND -gt $nth_max ]] && export NTHREADS_POSTSND=$nth_max
+    [[ $NTHREADS_POSTSND -gt ${nth_max} ]] && export NTHREADS_POSTSND=${nth_max}
     export APRUN_POSTSND="$launcher"
 
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
-    [[ $NTHREADS_POSTSNDCFP -gt $nth_max ]] && export NTHREADS_POSTSNDCFP=$nth_max
+    [[ ${NTHREADS_POSTSNDCFP} -gt ${nth_max} ]] && export NTHREADS_POSTSNDCFP=${nth_max}
     export APRUN_POSTSNDCFP="$launcher"
 
 elif [ "${step}" = "awips" ]; then
@@ -347,7 +347,7 @@ elif [ "${step}" = "awips" ]; then
     nth_max=$(($npe_node_max / $npe_node_awips))
 
     export NTHREADS_AWIPS=${nth_awips:-2}
-    [[ $NTHREADS_AWIPS -gt $nth_max ]] && export NTHREADS_AWIPS=$nth_max
+    [[ $NTHREADS_AWIPS -gt ${nth_max} ]] && export NTHREADS_AWIPS=${nth_max}
     export APRUN_AWIPSCFP="$launcher -n $npe_awips --multi-prog"
 
 elif [ "${step}" = "gempak" ]; then
@@ -355,6 +355,6 @@ elif [ "${step}" = "gempak" ]; then
     nth_max=$(($npe_node_max / $npe_node_gempak))
 
     export NTHREADS_GEMPAK=${nth_gempak:-1}
-    [[ $NTHREADS_GEMPAK -gt $nth_max ]] && export NTHREADS_GEMPAK=$nth_max
+    [[ $NTHREADS_GEMPAK -gt ${nth_max} ]] && export NTHREADS_GEMPAK=${nth_max}
     export APRUN="$launcher -n $npe_gempak --multi-prog"
 fi
