--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -121,6 +121,9 @@ elif [ $step = "sfcanl" ]; then
 
 elif [ $step = "gldas" ]; then
 
+    export USE_CFP="YES"
+    export CFP_MP="NO"
+
     nth_max=$(($npe_node_max / $npe_node_gldas))
 
     export NTHREADS_GLDAS=${nth_gldas:-$nth_max}
