--- a/env/HERA.env
+++ b/env/HERA.env
@@ -125,6 +125,9 @@ elif [ $step = "sfcanl" ]; then
 
 elif [ $step = "gldas" ]; then
 
+    export USE_CFP="YES"
+    export CFP_MP="YES"
+
     nth_max=$(($npe_node_max / $npe_node_gldas))
 
     export NTHREADS_GLDAS=${nth_gldas:-$nth_max}
