--- a/env/ORION.env
+++ b/env/ORION.env
@@ -123,6 +123,8 @@ elif [ $step = "sfcanl" ]; then
 
 elif [ $step = "gldas" ]; then
 
+    export USE_CFP="NO"
+
     nth_max=$(($npe_node_max / $npe_node_gldas))
 
     export NTHREADS_GLDAS=${nth_gldas:-$nth_max}
