--- a/env/ORION.env
+++ b/env/ORION.env
@@ -235,7 +235,7 @@ elif [ "${step}" = "efcsfsoi" ]; then
     export NTHREADS_FV3=${nth_efcsfsoi:-$nth_max}
     [[ $NTHREADS_FV3 -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
     export cores_per_node=$npe_node_max
-    export APRUN_FV3="$launcher -n npe_efcsfsoi"
+    export APRUN_FV3="$launcher -n $npe_efcsfsoi"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
