--- a/env/S4.env
+++ b/env/S4.env
@@ -276,9 +276,9 @@ elif [[ ${step} = "postsnd" ]]; then
 
 elif [[ ${step} = "awips" ]]; then
 
-     echo "WARNING: ${step} is not enabled on ${machine}!"
+     echo "WARNING: ${step} is not enabled on S4!"
 
 elif [[ ${step} = "gempak" ]]; then
 
-     echo "WARNING: ${step} is not enabled on ${machine}!"
+     echo "WARNING: ${step} is not enabled on S4!"
 fi
