add default options for cycled and forecast-only.  Validate supported resolutions on the platforms

--- a/workflow/hosts/hera.yaml
+++ b/workflow/hosts/hera.yaml
@@ -17,3 +17,4 @@ chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'YES'
 localarch: 'NO'
 atardir: '/NCEPDEV/$HPSS_PROJECT/1year/$USER/$machine/scratch/$PSLOT'
+supported_resolutions: ['C384', 'C192', 'C96', 'C48']
