Update to new UFS_UTILS hash

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -8,7 +8,7 @@ protocol = git
 required = True
 
 [UFS-Utils]
-hash = ufs_utils_1_8_0
+hash = 8b990c0
 local_path = sorc/ufs_utils.fd
 repo_url = https://github.com/NOAA-EMC/UFS_UTILS.git
 protocol = git
