Add gfs-utils to manage externals config
Refs: #966

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -7,6 +7,13 @@ repo_url = https://github.com/ufs-community/ufs-weather-model.git
 protocol = git
 required = True
 
+[gfs-utils]
+hash = 93898e1
+local_path = sorc/gfs_utils.fd
+repo_url = https://github.com/NOAA-EMC/gfs-utils
+protocol = git
+required = True
+
 [UFS-Utils]
 hash = 8b990c0
 local_path = sorc/ufs_utils.fd
