Addressed linter warnings in S4.env. #138

--- a/env/S4.env
+++ b/env/S4.env
@@ -42,6 +42,7 @@ export jobid=${job}.${PBS_JOBID:-$$}
 
 if [[ ${step} = "prep" || ${step} = "prepbufr" ]]; then
 
+    npe_node_prep=${npe_node_prep:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_prep))
 
     export POE="NO"
@@ -62,11 +63,12 @@ elif [[ ${step} = "atmanalrun" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
+    npe_node_atmanalrun=${npe_node_atmanalrun:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_atmanalrun))
 
     export NTHREADS_ATMANAL=${nth_atmanalrun:-${nth_max}}
     [[ ${NTHREADS_ATMANAL} -gt ${nth_max} ]] && export NTHREADS_ATMANAL=${nth_max}
-    export APRUN_ATMANAL="${launcher} -n ${npe_atmanalrun}"
+    export APRUN_ATMANAL="${launcher} -n ${npe_atmanalrun:-0}"
 
 elif [[ ${step} = "atmensanalrun" ]]; then
 
@@ -74,21 +76,23 @@ elif [[ ${step} = "atmensanalrun" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
+    npe_node_atmensanalrun=${npe_node_atmensanalrun:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_atmensanalrun))
 
     export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-${nth_max}}
     [[ ${NTHREADS_ATMENSANAL} -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
-    export APRUN_ATMENSANAL="${launcher} -n ${npe_atmensanalrun}"
+    export APRUN_ATMENSANAL="${launcher} -n ${npe_atmensanalrun:-0}"
 
 elif [[ ${step} = "aeroanlrun" ]]; then
 
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
+    npe_node_aeroanlrun=${npe_node_aeroanlrun:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_aeroanlrun))
 
     export NTHREADS_AEROANL=${nth_aeroanlrun:-${nth_max}}
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
-    export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
+    export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun:-0}"
 
 elif [[ ${step} = "anal" ]]; then
 
@@ -99,6 +103,7 @@ elif [[ ${step} = "anal" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
+    npe_node_anal=${npe_node_anal:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_anal))
 
     export NTHREADS_GSI=${nth_anal:-${nth_max}}
@@ -112,36 +117,39 @@ elif [[ ${step} = "anal" ]]; then
     export NTHREADS_CYCLE=${nth_cycle:-12}
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
     npe_cycle=${ntiles:-6}
-    export APRUN_CYCLE="${launcher} -n ${npe_cycle}"
+    export APRUN_CYCLE="${launcher} -n ${npe_cycle:-0}"
 
 
     export NTHREADS_GAUSFCANL=1
     npe_gausfcanl=${npe_gausfcanl:-1}
-    export APRUN_GAUSFCANL="${launcher} -n ${npe_gausfcanl}"
+    export APRUN_GAUSFCANL="${launcher} -n ${npe_gausfcanl:-0}"
 
 elif [[ ${step} = "sfcanl" ]]; then
+    npe_node_sfcanl=${npe_node_sfcanl:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_sfcanl))
 
     export NTHREADS_CYCLE=${nth_sfcanl:-14}
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
     npe_sfcanl=${ntiles:-6}
-    export APRUN_CYCLE="${launcher} -n ${npe_sfcanl}"
+    export APRUN_CYCLE="${launcher} -n ${npe_sfcanl:-0}"
 
 elif [[ ${step} = "gldas" ]]; then
 
+    npe_node_gldas=${npe_node_gldas:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_gldas))
 
     export NTHREADS_GLDAS=${nth_gldas:-${nth_max}}
     [[ ${NTHREADS_GLDAS} -gt ${nth_max} ]] && export NTHREADS_GLDAS=${nth_max}
-    export APRUN_GLDAS="${launcher} -n ${npe_gldas}"
+    export APRUN_GLDAS="${launcher} -n ${npe_gldas:-0}"
 
     export NTHREADS_GAUSSIAN=${nth_gaussian:-1}
     [[ ${NTHREADS_GAUSSIAN} -gt ${nth_max} ]] && export NTHREADS_GAUSSIAN=${nth_max}
-    export APRUN_GAUSSIAN="${launcher} -n ${npe_gaussian}"
+    export APRUN_GAUSSIAN="${launcher} -n ${npe_gaussian:-0}"
 
 # Must run data processing with exactly the number of tasks as time
 # periods being processed.
 
+    gldas_spinup_hours=${gldas_spinup_hours:-0}
     npe_gldas_data_proc=$((gldas_spinup_hours + 12))
     export APRUN_GLDAS_DATA_PROC="${launcher} -n ${npe_gldas_data_proc} --multi-prog"
 
@@ -154,6 +162,7 @@ elif [[ ${step} = "eobs" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
+    npe_node_eobs=${npe_node_eobs:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_eobs))
 
     export NTHREADS_GSI=${nth_eobs:-${nth_max}}
@@ -166,6 +175,7 @@ elif [[ ${step} = "eupd" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
+    npe_node_eupd=${npe_node_eupd:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_eupd))
 
     export NTHREADS_ENKF=${nth_eupd:-${nth_max}}
@@ -175,18 +185,19 @@ elif [[ ${step} = "eupd" ]]; then
 elif [[ ${step} = "fcst" ]]; then
 
     #PEs and PEs/node can differ for GFS and GDAS forecasts if threading differs
-    if [[ ${CDUMP} == "gfs" ]]; then
-        npe_fcst=${npe_fcst_gfs}
-        npe_node_fcst=${npe_node_fcst_gfs}
-        nth_fv3=${nth_fv3_gfs}
+    if [[ ${CDUMP:-gdas} == "gfs" ]]; then
+        npe_fcst=${npe_fcst_gfs:-0}
+        npe_node_fcst=${npe_node_fcst_gfs:-$npe_node_max}
+        nth_fv3=${nth_fv3_gfs:-1}
     fi
 
+    npe_node_fcst=${npe_node_fcst:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_fcst))
 
     export NTHREADS_FV3=${nth_fv3:-${nth_max}}
     [[ ${NTHREADS_FV3} -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
     export cores_per_node=${npe_node_max}
-    export APRUN_FV3="${launcher} -n ${npe_fcst}"
+    export APRUN_FV3="${launcher} -n ${npe_fcst:-0}"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ ${NTHREADS_REGRID_NEMSIO} -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
@@ -199,19 +210,21 @@ elif [[ ${step} = "fcst" ]]; then
 
 elif [[ ${step} = "efcs" ]]; then
 
+    npe_node_efcs=${npe_node_efcs:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_efcs))
 
     export NTHREADS_FV3=${nth_efcs:-${nth_max}}
     [[ ${NTHREADS_FV3} -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
     export cores_per_node=${npe_node_max}
-    export APRUN_FV3="${launcher} -n ${npe_efcs}"
+    export APRUN_FV3="${launcher} -n ${npe_efcs:-0}"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ ${NTHREADS_REGRID_NEMSIO} -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
-    export APRUN_REGRID_NEMSIO="${launcher} ${LEVS}"
+    export APRUN_REGRID_NEMSIO="${launcher} ${LEVS:-128}"
 
 elif [[ ${step} = "post" ]]; then
 
+    npe_node_post=${npe_node_post:-npe_node_max}
     nth_max=$((npe_node_max / npe_node_post))
 
     export NTHREADS_NP=${nth_np:-1}
@@ -224,6 +237,7 @@ elif [[ ${step} = "post" ]]; then
 
 elif [[ ${step} = "ecen" ]]; then
 
+    npe_node_ecen=${npe_node_ecen:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_ecen))
 
     export NTHREADS_ECEN=${nth_ecen:-${nth_max}}
@@ -240,18 +254,20 @@ elif [[ ${step} = "ecen" ]]; then
 
 elif [[ ${step} = "esfc" ]]; then
 
+    npe_node_esfc=${npe_node_esfc:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_esfc))
 
     export NTHREADS_ESFC=${nth_esfc:-${nth_max}}
     [[ ${NTHREADS_ESFC} -gt ${nth_max} ]] && export NTHREADS_ESFC=${nth_max}
-    export APRUN_ESFC="${launcher} -n ${npe_esfc}"
+    export APRUN_ESFC="${launcher} -n ${npe_esfc:-0}"
 
     export NTHREADS_CYCLE=${nth_cycle:-14}
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
-    export APRUN_CYCLE="${launcher} -n ${npe_esfc}"
+    export APRUN_CYCLE="${launcher} -n ${npe_esfc:-0}"
 
 elif [[ ${step} = "epos" ]]; then
 
+    npe_node_epos=${npe_node_epos:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_epos))
 
     export NTHREADS_EPOS=${nth_epos:-${nth_max}}
@@ -264,6 +280,7 @@ elif [[ ${step} = "init" ]]; then
 
 elif [[ ${step} = "postsnd" ]]; then
 
+    npe_node_postsnd=${npe_node_postsnd:-$npe_node_max}
     nth_max=$((npe_node_max / npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
