Addressed linter warnings in S4.env. #138

--- a/env/S4.env
+++ b/env/S4.env
@@ -42,7 +42,7 @@ export jobid=${job}.${PBS_JOBID:-$$}
 
 if [[ ${step} = "prep" || ${step} = "prepbufr" ]]; then
 
-    npe_node_prep=${npe_node_prep:-$npe_node_max}
+    npe_node_prep=${npe_node_prep:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_prep))
 
     export POE="NO"
@@ -63,7 +63,7 @@ elif [[ ${step} = "atmanalrun" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
-    npe_node_atmanalrun=${npe_node_atmanalrun:-$npe_node_max}
+    npe_node_atmanalrun=${npe_node_atmanalrun:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_atmanalrun))
 
     export NTHREADS_ATMANAL=${nth_atmanalrun:-${nth_max}}
@@ -76,7 +76,7 @@ elif [[ ${step} = "atmensanalrun" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
-    npe_node_atmensanalrun=${npe_node_atmensanalrun:-$npe_node_max}
+    npe_node_atmensanalrun=${npe_node_atmensanalrun:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_atmensanalrun))
 
     export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-${nth_max}}
@@ -87,7 +87,7 @@ elif [[ ${step} = "aeroanlrun" ]]; then
 
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
-    npe_node_aeroanlrun=${npe_node_aeroanlrun:-$npe_node_max}
+    npe_node_aeroanlrun=${npe_node_aeroanlrun:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_aeroanlrun))
 
     export NTHREADS_AEROANL=${nth_aeroanlrun:-${nth_max}}
@@ -103,7 +103,7 @@ elif [[ ${step} = "anal" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
-    npe_node_anal=${npe_node_anal:-$npe_node_max}
+    npe_node_anal=${npe_node_anal:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_anal))
 
     export NTHREADS_GSI=${nth_anal:-${nth_max}}
@@ -125,7 +125,7 @@ elif [[ ${step} = "anal" ]]; then
     export APRUN_GAUSFCANL="${launcher} -n ${npe_gausfcanl:-0}"
 
 elif [[ ${step} = "sfcanl" ]]; then
-    npe_node_sfcanl=${npe_node_sfcanl:-$npe_node_max}
+    npe_node_sfcanl=${npe_node_sfcanl:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_sfcanl))
 
     export NTHREADS_CYCLE=${nth_sfcanl:-14}
@@ -135,7 +135,7 @@ elif [[ ${step} = "sfcanl" ]]; then
 
 elif [[ ${step} = "gldas" ]]; then
 
-    npe_node_gldas=${npe_node_gldas:-$npe_node_max}
+    npe_node_gldas=${npe_node_gldas:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_gldas))
 
     export NTHREADS_GLDAS=${nth_gldas:-${nth_max}}
@@ -162,7 +162,7 @@ elif [[ ${step} = "eobs" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
-    npe_node_eobs=${npe_node_eobs:-$npe_node_max}
+    npe_node_eobs=${npe_node_eobs:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_eobs))
 
     export NTHREADS_GSI=${nth_eobs:-${nth_max}}
@@ -175,7 +175,7 @@ elif [[ ${step} = "eupd" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
-    npe_node_eupd=${npe_node_eupd:-$npe_node_max}
+    npe_node_eupd=${npe_node_eupd:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_eupd))
 
     export NTHREADS_ENKF=${nth_eupd:-${nth_max}}
@@ -187,11 +187,11 @@ elif [[ ${step} = "fcst" ]]; then
     #PEs and PEs/node can differ for GFS and GDAS forecasts if threading differs
     if [[ ${CDUMP:-gdas} == "gfs" ]]; then
         npe_fcst=${npe_fcst_gfs:-0}
-        npe_node_fcst=${npe_node_fcst_gfs:-$npe_node_max}
+        npe_node_fcst=${npe_node_fcst_gfs:-${npe_node_max}}
         nth_fv3=${nth_fv3_gfs:-1}
     fi
 
-    npe_node_fcst=${npe_node_fcst:-$npe_node_max}
+    npe_node_fcst=${npe_node_fcst:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_fcst))
 
     export NTHREADS_FV3=${nth_fv3:-${nth_max}}
@@ -210,7 +210,7 @@ elif [[ ${step} = "fcst" ]]; then
 
 elif [[ ${step} = "efcs" ]]; then
 
-    npe_node_efcs=${npe_node_efcs:-$npe_node_max}
+    npe_node_efcs=${npe_node_efcs:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_efcs))
 
     export NTHREADS_FV3=${nth_efcs:-${nth_max}}
@@ -237,7 +237,7 @@ elif [[ ${step} = "post" ]]; then
 
 elif [[ ${step} = "ecen" ]]; then
 
-    npe_node_ecen=${npe_node_ecen:-$npe_node_max}
+    npe_node_ecen=${npe_node_ecen:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_ecen))
 
     export NTHREADS_ECEN=${nth_ecen:-${nth_max}}
@@ -254,7 +254,7 @@ elif [[ ${step} = "ecen" ]]; then
 
 elif [[ ${step} = "esfc" ]]; then
 
-    npe_node_esfc=${npe_node_esfc:-$npe_node_max}
+    npe_node_esfc=${npe_node_esfc:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_esfc))
 
     export NTHREADS_ESFC=${nth_esfc:-${nth_max}}
@@ -267,7 +267,7 @@ elif [[ ${step} = "esfc" ]]; then
 
 elif [[ ${step} = "epos" ]]; then
 
-    npe_node_epos=${npe_node_epos:-$npe_node_max}
+    npe_node_epos=${npe_node_epos:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_epos))
 
     export NTHREADS_EPOS=${nth_epos:-${nth_max}}
@@ -280,7 +280,7 @@ elif [[ ${step} = "init" ]]; then
 
 elif [[ ${step} = "postsnd" ]]; then
 
-    npe_node_postsnd=${npe_node_postsnd:-$npe_node_max}
+    npe_node_postsnd=${npe_node_postsnd:-${npe_node_max}}
     nth_max=$((npe_node_max / npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
