--- a/env/ORION.env
+++ b/env/ORION.env
@@ -85,7 +85,7 @@ elif [ $step = "aeroanlrun" ]; then
     [[ $NTHREADS_AEROANL -gt $nth_max ]] && export NTHREADS_AEROANL=$nth_max
     export APRUN_AEROANL="$launcher -n $npe_aeroanlrun"
 
-elif [ $step = "anal" ]; then
+elif [ $step = "anal" -o $step = "analcalc" ]; then
 
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
