--- a/workflow/hosts/orion.yaml
+++ b/workflow/hosts/orion.yaml
@@ -17,4 +17,4 @@ chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'NO'
 localarch: 'NO'
 atardir: '$NOSCRUB/archive_rotdir/$PSLOT'
-supported_resolutions: ['C384', 'C192', 'C96', 'C48']
+supported_resolutions: ['C768', 'C384', 'C192', 'C96', 'C48']
