Shortened DO_MAKE to MAKE for prepbufr files. #138

--- a/workflow/hosts/orion.yaml
+++ b/workflow/hosts/orion.yaml
@@ -18,5 +18,5 @@ chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'NO'
 localarch: 'NO'
 atardir: '$NOSCRUB/archive_rotdir/$PSLOT'
-do_make_nsstbufr: 'NO'
-do_make_acftbufr: 'NO'
+make_nsstbufr: 'NO'
+make_acftbufr: 'NO'
