--- a/workflow/hosts/s4.yaml
+++ b/workflow/hosts/s4.yaml
@@ -18,5 +18,5 @@ chgrp_cmd: 'ls'
 hpssarch: 'NO'
 localarch: 'NO'
 atardir: '$NOSCRUB/archive_rotdir/$PSLOT'
-do_make_nsstbufr: 'YES'
-do_make_acftbufr: 'YES'
+make_nsstbufr: 'YES'
+make_acftbufr: 'YES'
