--- a/env/S4.env
+++ b/env/S4.env
@@ -1,4 +1,4 @@
-#!/bin/ksh -x
+#!/bin/bash -x
 
 if [ $# -ne 1 ]; then
 
@@ -23,15 +23,8 @@ fi
 export launcher="srun -l --export=ALL"
 
 # Configure MPI environment
-#export I_MPI_ADJUST_ALLREDUCE=5
-#export MPI_BUFS_PER_PROC=2048
-#export MPI_BUFS_PER_HOST=2048
-#export MPI_GROUP_MAX=256
-#export MPI_MEMMAP_OFF=1
-#export MP_STDOUTMODE="ORDERED"
 export OMP_STACKSIZE=2048000
 export NTHSTACK=1024000000
-#export LD_BIND_NOW=1
 
 ulimit -s unlimited
 ulimit -a
