add NWS in the orgs list and a filesystem utility file

--- a/ush/python/pygw/setup.cfg
+++ b/ush/python/pygw/setup.cfg
@@ -4,9 +4,9 @@ version = 0.0.1
 description = Global applications specific workflow related tools
 long_description = file: README.md
 long_description_content_type = text/markdown
-author = "NOAA/NCEP/EMC"
+author = "NOAA/NWS/NCEP/EMC"
 #author_email = first.last@domain.tld
-keywords = NOAA, NCEP, EMC, GFS, GEFS
+keywords = NOAA, NWS, NCEP, EMC, GFS, GEFS
 home_page = https://github.com/noaa-emc/global-workflow
 license = GNU Lesser General Public License
 classifiers =
