Supported resolutions on platforms and defaults for mode (#1026)
* add default options for cycled and forecast-only.  Validate supported resolutions on the platforms

--- a/workflow/hosts/orion.yaml
+++ b/workflow/hosts/orion.yaml
@@ -17,3 +17,4 @@ chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'NO'
 localarch: 'NO'
 atardir: '$NOSCRUB/archive_rotdir/$PSLOT'
+supported_resolutions: ['C768', 'C384', 'C192', 'C96', 'C48']
