Updates for COMINsyn in supported platforms
- Change COMROOT/comroot back to prior path on Hera.
- Add cominsyn to setup_expt.py and hosts files to set COMINsyn
in config.base[.emc.dyn] on supported platforms.
- When syndat is added to ops mirror to Hera change comroot to
new mirror location to get syndat.

Refs #419

--- a/workflow/hosts/hera.yaml
+++ b/workflow/hosts/hera.yaml
@@ -2,7 +2,8 @@ base_git: '/scratch1/NCEPDEV/global/glopara/git'
 base_svn: '/scratch1/NCEPDEV/global/glopara/svn'
 dmpdir: '/scratch1/NCEPDEV/global/glopara/dump'
 packageroot: '/scratch1/NCEPDEV/global/glopara/nwpara'
-comroot: '/scratch1/NCEPDEV/rstprod/prod/com'
+comroot: '/scratch1/NCEPDEV/global/glopara/com'
+cominsyn: '${COMROOT}/gfs/prod/syndat'
 homedir: '/scratch1/NCEPDEV/global/$USER'
 stmp: '/scratch1/NCEPDEV/stmp2/$USER'
 ptmp: '/scratch1/NCEPDEV/stmp4/$USER'
