--- a/workflow/hosts/orion.yaml
+++ b/workflow/hosts/orion.yaml
@@ -3,6 +3,7 @@ base_svn: '/work/noaa/global/glopara/svn'
 dmpdir: '/work/noaa/rstprod/dump'
 packageroot: '/work/noaa/global/glopara/nwpara'
 comroot: '/work/noaa/global/glopara/com'
+cominsyn: '${COMROOT}/gfs/prod/syndat'
 homedir: '/work/noaa/global/$USER'
 stmp: '/work/noaa/stmp/$USER'
 ptmp: '/work/noaa/stmp/$USER'
