--- a/workflow/hosts/wcoss2.yaml
+++ b/workflow/hosts/wcoss2.yaml
@@ -3,6 +3,7 @@ base_svn: '/lfs/h2/emc/global/save/emc.global/git'
 dmpdir: '/lfs/h2/emc/global/noscrub/emc.global/dump'
 packageroot: '${PACKAGEROOT:-"/lfs/h1/ops/prod/packages"}'
 comroot: '${COMROOT:-"/lfs/h1/ops/prod/com"}'
+cominsyn: '${COMROOT}/gfs/${gfs_ver:-"v16.2"})/syndat'
 homedir: '/lfs/h2/emc/global/noscrub/$USER'
 stmp: '/lfs/h2/emc/stmp/$USER'
 ptmp: '/lfs/h2/emc/ptmp/$USER'
