--- a/workflow/hosts/s4.yaml
+++ b/workflow/hosts/s4.yaml
@@ -20,3 +20,4 @@ localarch: 'NO'
 atardir: '$NOSCRUB/archive_rotdir/$PSLOT'
 make_nsstbufr: 'YES'
 make_acftbufr: 'YES'
+supported_resolutions: ['C384', 'C192', 'C96', 'C48']
