--- a/env/HERA.env
+++ b/env/HERA.env
@@ -43,6 +43,7 @@ if [ $step = "prep" -o $step = "prepbufr" ]; then
     export POE="NO"
     export BACK="NO"
     export sys_tp="HERA"
+    export launcher_PREP="srun"
 
 elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $step = "wavepostbndpnt" -o $step = "wavepostbndpntbll" -o $step = "wavepostpnt" ]; then
 
