Updates S4 env and host files.  #138

--- a/env/S4.env
+++ b/env/S4.env
@@ -87,7 +87,7 @@ elif [[ ${step} = "aeroanlrun" ]]; then
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun:-0}"
 
-elif [[ ${step} = "anal" ]]; then
+elif [[ ${step} = "anal" || $step = "analcalc" ]]; then
 
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
