--- a/workflow/hosts/s4.yaml
+++ b/workflow/hosts/s4.yaml
@@ -1,7 +1,8 @@
 base_git: '/data/prod/glopara/git'
 dmpdir: '/data/prod/glopara/dump'
-nwprod: '/data/prod/glopara/nwpara'
+packageroot: '/data/prod/glopara/nwpara'
 comroot: '/data/prod/glopara/com'
+cominsyn: '${COMROOT}/gfs/prod/syndat'
 homedir: '/data/users/$USER'
 stmp: '/scratch/users/$USER'
 ptmp: '/scratch/users/$USER'
