Updated to include the new prepobs package. #138

--- a/env/S4.env
+++ b/env/S4.env
@@ -41,6 +41,7 @@ if [[ ${step} = "prep" || ${step} = "prepbufr" ]]; then
     export POE="NO"
     export BACK="NO"
     export sys_tp="S4"
+    export launcher_PREP="srun"
 
 elif [[ ${step} = "waveinit" || ${step} = "waveprep" || ${step} = "wavepostsbs" || ${step} = "wavepostbndpnt" || ${step} = "wavepostbndpntbll" || ${step} = "wavepostpnt" ]]; then
 
