wip. fixes for forecast jobs

--- a/env/JET.env
+++ b/env/JET.env
@@ -1,4 +1,4 @@
-#!/bin/ksh -x
+#!/usr/bin/env bash
 
 if [ $# -ne 1 ]; then
 
@@ -27,9 +27,6 @@ export NTHSTACK=1024000000
 
 ulimit -s unlimited
 ulimit -a
-
-export job=${PBS_JOBNAME:-$step}
-export jobid=${job}.${PBS_JOBID:-$$}
 
 if [ $step = "prep" -o $step = "prepbufr" ]; then
 
