Set hpssarch to NO by default on WCOSS2
- Update WCOSS2 hosts yaml file to set `hpssarch` to "NO" by default.
- Limited bandwidth between WCOSS2 to HPSS so don't want users archiving to HPSS unless necessary.

Refs #419

--- a/workflow/hosts/wcoss2.yaml
+++ b/workflow/hosts/wcoss2.yaml
@@ -15,7 +15,7 @@ partition_batch: ''
 partition_service: ''
 chgrp_rstprod: 'YES'
 chgrp_cmd: 'chgrp rstprod'
-hpssarch: 'YES'
+hpssarch: 'NO'
 localarch: 'NO'
 atardir: '/NCEPDEV/$HPSS_PROJECT/1year/$USER/$machine/scratch/$PSLOT'
 make_nsstbufr: 'NO'
